<resources>
    <string name="app_name">ATourGuide</string>
    <string name="forget_pass">Forget Password</string>
    <string name="forget_pass_detail"> PROVIDE YOUR ACCOUNT EMAIL FOR WHICH YOU WANT TO REST YOUR PASSWORD! </string>
    <string name="hint_email">EMAIL</string>
    <string name="next_btn">NEXT</string>
    <string name="make_selection_detail">Select which contact detail should we use to reset your password </string>

    <string name="make_selection">MAKE SELECTION</string>
    <string name="via_sms">Via SMS:</string>
    <string name="via_call">Via call:</string>
    <string name="via_mail">Via mail:</string>
    <string name="title_activity_homepage">homepage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">you name</string>
    <string name="nav_header_subtitle">email</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="menu_home">Home</string>
    <string name="menu_profile">profile</string>
    <string name="menu_messages">messageschats</string>
    <string name="menu_contact">contact</string>
    <string name="menu_Settings">Settings</string>


    <string name="action_logOut">Log Out</string>
    <string name="action_signin">sign in</string>
    <string name="action_settings">Settings</string>


    <string name="facebook_app_id">3022384561383697</string>
    <string name="fb_login_protocol_scheme">fb3022384561383697</string>
    <string name="contact_number">+21626236286</string>
    <string name="mail">admintourguide@gmail.com</string>
    <string name="title_activity_home_tourist">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_profile">profile</string>
    <string name="title_messages">Messages</string>
    <string name="nameguide">name</string>
    <string name="descguide">description</string>
    <string name="description">description erfm rigfr b
        gierb erbg iuebrgf zngibref nrieb irb ib gn tng uoitg t
        iugh ureighiuerh goieruhz guherf uehziugh ipearhhiizguzguerzp
        phahgagurreappghr eiebg iaeurbpg iberneiig beribiu</string>
    <string name="menu_post">Post</string>
    <string name="title_post">Post</string>
    <string name="desccptionphoto">desccption                      photo</string>
    <string-array name="publicatiopn">
        <item>pubA</item>
        <item>pubB</item>
        <item>pubC</item>
        <item>pubD</item>
        <item>pubE</item>


    </string-array>
    <string-array name="description">
        <item>pubAdescription </item>
        <item>pubBdescription</item>
        <item>pubCdescription</item>
        <item>pubDdescription</item>
        <item>pubEdescription</item>


    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="the_price_of_your_service">The price of your service</string>
    <string name="descriptionn">description</string>

</resources>