<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.monta.atourguide.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_Post"
        android:name="com.monta.atourguide.ui.Post.PostFragment"
        android:label="@string/title_post"
        tools:layout="@layout/fragment_post" />

    <fragment
        android:id="@+id/navigation_profilet"
        android:name="com.monta.atourguide.ui.profileT.ProfiletFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profilet" />

    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.monta.atourguide.ui.Messages.MessagesFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_messages" />
</navigation>