<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forgetpassgiude"
    android:background="@drawable/backappx"
    android:padding="30dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="gobackLogin"
            android:padding="5dp"
            android:src="@drawable/back_icon" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/forgotpassword"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_pass"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textAllCaps="true"

            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:gravity="center"
            android:text="@string/forget_pass_detail"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
         app:boxBackgroundColor="@color/lightwhite"
         app:boxStrokeColor="@color/black"
         app:boxStrokeWidthFocused="2dp"
         android:hint="@string/hint_email"
         app:startIconDrawable="@drawable/ic_baseline_email_24"
         app:startIconTint="@color/sky_blue"
         app:endIconMode="clear_text"
         app:endIconTint="@color/sky_blue"
         app:hintTextColor="@color/black"
         >
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/black"

             />


     </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btNnexToverif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/sky_blue"
            android:onClick="gotoverif"
            android:text="@string/next_btn"
            android:textColor="@color/white" />


    </LinearLayout>


</ScrollView>