<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.contact.contactFragment"
    android:background="@drawable/backappx">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="50dp"
            android:background="@color/lightwhite"
            android:padding="10dp">

            <ImageView
                android:id="@+id/mobile_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/icon_moblie"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"/>
            <TextView
                android:id="@+id/moblie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/via_call"

                android:textSize="25sp"
                android:layout_toRightOf="@id/mobile_icon"
                android:layout_marginTop="40dp"
                />
            <TextView
                android:id="@+id/moblie_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_number"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:layout_toRightOf="@id/mobile_icon"
                android:layout_below="@id/moblie_title"

                />

            <Button
                android:id="@+id/buttoncall"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/trans"/>

        </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="20dp"
                android:background="@color/lightwhite"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/mail_icon"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/icon_mail"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"/>
                <TextView
                    android:id="@+id/mail_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/via_mail"

                    android:textSize="25sp"
                    android:layout_toRightOf="@id/mail_icon"
                    android:layout_marginTop="40dp"
                    />
                <TextView
                    android:id="@+id/mail_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mail"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_toRightOf="@id/mail_icon"
                    android:layout_below="@id/mail_title"

                    />

                <Button
                    android:id="@+id/mail_contact"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/trans"/>

            </RelativeLayout>
        </LinearLayout>

    <TextView
        android:id="@+id/text_Contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</FrameLayout>