<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forgetpassgiude"
    android:background="@drawable/backappx"
    android:padding="30dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="gobackLogin"
            android:padding="5dp"
            android:src="@drawable/back_icon" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_selection"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:textAllCaps="true"
            android:layout_marginTop="30dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_selection_detail"
            android:textColor="@color/white"
            android:textSize="18sp" />
          <RelativeLayout
              android:layout_width="match_parent"
              android:layout_height="180dp"
              android:layout_marginTop="50dp"
              android:background="@color/lightwhite"
              android:padding="10dp">

              <ImageView
                  android:id="@+id/mobile_icon"
                  android:layout_width="80dp"
                  android:layout_height="80dp"
                  android:src="@drawable/icon_moblie"
                  android:layout_centerVertical="true"
                  android:layout_marginRight="20dp"/>
              <TextView
                  android:id="@+id/moblie_title"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/via_sms"

                  android:textSize="25sp"
                  android:layout_toRightOf="@id/mobile_icon"
                  android:layout_marginTop="40dp"
                  />
              <TextView
                  android:id="@+id/moblie_desc"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="+999999999"
                  android:textColor="@color/black"
                  android:textSize="25sp"
                  android:layout_toRightOf="@id/mobile_icon"
                  android:layout_below="@id/moblie_title"

                  />

          <Button
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/trans"/>

          </RelativeLayout>
          <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="20dp"
            android:background="@color/lightwhite"
            android:padding="10dp">

            <ImageView
                android:id="@+id/mail_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/icon_mail"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"/>
            <TextView
                android:id="@+id/mail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/via_mail"

                android:textSize="25sp"
                android:layout_toRightOf="@id/mail_icon"
                android:layout_marginTop="40dp"
                />
            <TextView
                android:id="@+id/mail_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="exemple@gmail.com"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_toRightOf="@id/mail_icon"
                android:layout_below="@id/mail_title"

                />

              <Button
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:background="@color/trans"/>

        </RelativeLayout>



    </LinearLayout>


</ScrollView>